# capnproto

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: quick-test.yml
c++/: CMakeLists.txt
c++/src/capnp/: Cargo.toml  any.h  build.rs  capability-test.c++  common.h  encoding-test.c++  generated-header-support.h  lib.rs  test-util.h  test.capnp
c++/src/capnp/compiler/: Cargo.toml  build.rs  capnpc-c++.c++  generics.c++  glue.c++  lib.rs
c++/src/capnp/compiler/rust/: Cargo.toml  build.rs  glue.c++  glue.h  jank.c++  lib.rs
c++/src/capnp/compiler/rust/tests/: basic.rs
c++/src/capnp/compiler/tests/: basic.rs
c++/src/capnp/rust/: Cargo.toml  build.rs
c++/src/capnp/tests/: basic.rs
c++/src/kj/: Cargo.toml  build.rs
c++/src/kj/async/: Cargo.toml  build.rs
c++/src/kj/compat/: Cargo.toml  build.rs  lib.rs
c++/src/kj/rust/: Cargo.toml  build.rs  lib.rs
