[workspace]
resolver = "2"
members = ["c++/src/capnp", "c++/src/kj", "c++/src/kj/build"]

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
repository = "https://github.com/fundament-software/capstone"
documentation = "https://capnproto.org/"
readme = "README.md"

[workspace.dependencies]
cxx = "1.0.76"
eyre = "0.6.12"
cc = "1.0.73"
cxx-build = "1.0.76"
kj-sys = { path = "c++/src/kj" }
kj-build = { path = "c++/src/kj/build" }
