[package]
name = "capnp-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "capnp"

[lib]
path = "lib.rs"

[features]
default = []
heavy = ["kj-sys/heavy", "dep:kj-async-sys"]

[dependencies]
cxx.workspace = true
kj-async-sys = { path = "../kj/async", default-features = false, optional = true }
kj-sys.workspace = true

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
kj-build.workspace = true
