[package]
name = "kj-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "kj"

[lib]
path = "lib.rs"

[features]
default = []
async = []
heavy = []
libdl = []
save_acquired_lock_info = []
track_lock_blocking = []

[dependencies]
cxx.workspace = true

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
