[package]
name = "kj-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "kj"

[lib]
path = "lib.rs"

[features]
default = ["heavy"]
async = ["heavy"]
http = ["heavy"]
zlib = ["heavy"]
ssl = ["heavy"]
heavy = []
libdl = []

[dependencies]
cxx.workspace = true

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
