[package]
name = "capnpc-sys"
version.workspace = true
edition.workspace = true
links = "capnpc"

[lib]
path = "lib.rs"

[dependencies]
cxx.workspace = true
capnp-sys.workspace = true
kj-async-sys.workspace = true
kj-sys.workspace = true

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
kj-build.workspace = true
