[package]
name = "capnpc-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "capnpc"

[lib]
path = "lib.rs"

[features]
default = []
libdl = ["capnp-sys/libdl", "kj-sys/libdl"]
save_acquired_lock_info = [
  "capnp-sys/save_acquired_lock_info",
  "kj-sys/save_acquired_lock_info",
]
track_lock_blocking = [
  "capnp-sys/track_lock_blocking",
  "kj-sys/track_lock_blocking",
]

[dependencies]
cxx.workspace = true
capnp-sys = { path = "..", features = ["heavy"] }
kj-sys.workspace = true

[dev-dependencies]
eyre.workspace = true

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
kj-build.workspace = true
