[package]
name = "kj-gzip-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "kj-gzip"

[lib]

[features]
default = []
zlib = ["dep:libz-sys"]

[dependencies]
cxx = "1.0.76"
kj-async-sys.workspace = true
kj-sys.workspace = true
libz-sys = { version = "1.1.8", optional = true }

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
kj-build.workspace = true
