[package]
name = "kj-gzip-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
links = "kj-gzip"

[lib]
path = "lib.rs"

[features]
default = ["zlib"]
libdl = ["kj-sys/libdl"]
save_acquired_lock_info = ["kj-sys/save_acquired_lock_info"]
track_lock_blocking = ["kj-sys/track_lock_blocking"]
zlib = ["libz-sys"]

[dependencies]
cxx = "1.0.76"
kj-sys.workspace = true
libz-sys = { version = "1.1", default-features = false, features = [
  "libc",
], optional = true }

[build-dependencies]
eyre.workspace = true
cc.workspace = true
cxx-build.workspace = true
kj-build.workspace = true
